# fastapi-auth-keycloak

./: .flake8  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: publish.yaml  test.yaml
fastapi_auth/: __init__.py  auth_header.py  hmac_key.py  public_key.py  user.py
fastapi_auth/jwt/: __init__.py  backend.py  user.py
fastapi_auth/jwt/keycloak/: __init__.py  authorization.py  backend.py  client_access.py  resource.py  resource_access.py  user.py
fastapi_auth/keycloak/: __init__.py  access.py  auth_credentials.py  authorization.py  backend.py  permissions.py  resource.py  token_cache.py  uma_authorize.py  user.py
fastapi_auth/uma/: __init__.py  authorize.py  authorized.py  proto.py
tests/: test_keycloak_auth_credentials.py  test_keycloak_backend.py  test_keycloak_integration.py  test_keycloak_uma_protocols.py  test_keycloak_user.py
tests/jwt/: test_backend.py  test_integration.py  test_jwt_backend.py  test_jwt_integration.py
tests/jwt/keycloak/: test_keycloak_backend.py  test_keycloak_user.py
tests/keycloak/: test_keycloak_auth_credentials.py  test_keycloak_backend.py  test_keycloak_integration.py  test_keycloak_uma_protocols.py  test_keycloak_uma_ticket_integration.py  test_keycloak_user.py  test_token_cache.py
