[tool.poetry]
name = "fastapi-auth"
version = "0.1.0"
description = "Authentication modules for FastAPI"
authors = ["Dave Sutherland <dave@alphalayer.ai>"]
readme = "README.md"
packages = [{include = "fastapi_auth"}]

[tool.poetry.dependencies]
python = "^3.9"
pydantic = { extras = ["email"], version = "^2.5.0" }
fastapi = ">=0.97.0,<1.0"
pyjwt = { extras = ["crypto"], version = "^2.6.0" }

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
pre-commit = "^3.2.1"
pytest = "^7.2.2"
black = "^22.12"
isort = "^5.12.0"
httpx = "^0.24.1"


[[tool.poetry.source]]
name = "alphalayer-publish"
url = "https://pkgs.dev.azure.com/alphalayerai/Packages/_packaging/Python/pypi/upload/"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
exclude = '''
/(
    \.git
    | __pycache__
    | \.venv
    | build
    | dist
)/
'''

[tool.isort]
profile = "black"
lines_between_sections = 1
line_length = 120
multi_line_output = 3
sections = ["FUTURE","STDLIB","THIRDPARTY","FIRSTPARTY","LOCALFOLDER"]

[tool.pytest.ini_options]
testpaths = ["tests"]
